<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ingress Dual Map</string>
    <string-array name="actionbar_dropdown">
        <item>Service</item>
        <item>Download</item>
        <item>Import</item>
        <item>List</item>
        <item>Maps</item>
        <item>Settings</item>
    </string-array>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="dismiss_notifications">Dismiss notifications</string>
    <string name="clear_imported_lists">Clear imported lists</string>
    <string name="stop_and_exit">Stop and exit</string>
    <string name="download_portal_lists">Download portal lists</string>
    <string name="download_lists">Download lists</string>
    <string name="delete_lists">Delete lists</string>
    <string name="import_portal_lists">Import portal lists</string>
    <string name="import_lists">Import lists</string>
    <string name="refresh_available_lists">Refresh available lists</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="delete_portals">Delete portals</string>
    <string name="refresh_all_portals">Refresh all portals</string>
    <string name="export">Export</string>
    <string name="export_as_new_list">Export as new list</string>
    <string name="enter_a_filename_to_">Enter a filename to export the list to.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filename">Filename</string>
    <string name="add">Add</string>
    <string name="add_new_portal">Add new portal</string>
    <string name="change_map_layer">Change map layer</string>
    <string name="layer">Layer</string>
    <string name="plot_portals">Plot portals</string>
    <string name="plot">Plot</string>
    <string name="clear_portals">Clear portals</string>
    <string name="clear">Clear</string>
    <string name="save_settings">Save settings</string>
    <string name="cancel">Cancel</string>
    <string name="hack">Hack</string>
    <string name="mark_hacked">Mark hacked</string>
    <string name="mark_burned_out">Mark burned out</string>
    <string name="reset">Reset</string>
    <string name="reset_status">Reset status</string>
    <string name="set_alignment">Set alignment</string>
    <string-array name="alignment">
        <item>Undefined</item>
        <item>Neutral</item>
        <item>Resistance</item>
        <item>Enlightened</item>
    </string-array>
    <string name="set_level">Set level</string>
    <string name="set_key_count">Set key count</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="save">Save</string>
    <string name="pin">Pin</string>
    <string name="pin_notification">Pin notification</string>
    <string name="unpin_notification">Unpin notification</string>
    <string name="enable_resonator_buzzer">Enable resonator buzz</string>
    <string name="disable_resonator_buzzer">Disable resonator buzz</string>
    <string name="edit_portal">Edit portal</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="here">Here</string>
    <string name="notification_range">Notification range</string>
    <string name="filter_notifications">Filter notifications</string>
    <string name="by_range">By range:</string>
    <string name="no_filter">No filter</string>
    <string name="undefined">Undefined</string>
    <string name="by_alignment">By alignment:</string>
    <string name="neutral">Neutral</string>
    <string name="res">Res.</string>
    <string name="enl">Enl.</string>
    <string name="by_level">By level:</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="l3">L3</string>
    <string name="l4">L4</string>
    <string name="l5">L5</string>
    <string name="l6">L6</string>
    <string name="l7">L7</string>
    <string name="l8">L8</string>
    <string name="resonator_buzz_threshold">Resonator buzz threshold</string>

</resources>
