<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:titleCondensed="@string/add"
        android:title="@string/add_new_portal"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:titleCondensed="@string/refresh"
        android:title="@string/refresh_all_portals"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_export"
        android:titleCondensed="@string/export"
        android:title="@string/export_as_new_list"
        app:showAsAction="always" />

</menu>
